# supermercatoSOL

./: .gitignore  CMakeLists.txt  README.md  SOL_progetto.vpp.bak_001d  config.txt  configtest2.txt  direttore  log.csv  main  makefile  myscript  out.txt  supermercato  test_direttore  testa_coda.c  vgcore.15339
.UML/: SOL_progetto.vpp.bak_000f  SOL_progetto.vpp.bak_002d  SOL_progetto.vpp.bak_004d
UML/: SOL_progetto.vpp  SOL_progetto.vpp.bak_003d  SOL_progetto.vpp.bak_005d  SOL_progetto.vpp.bak_006d  SOL_progetto.vpp.bak_007d
config/: config.txt  configtest1.txt
include/: cassiere.h  cliente.h  concurrent_queue.h  mypoll.h  mypthread.h  mysocket.h  mytypes.h  myutils.h  notificatore.h  parser_config.h  parser_writer.h  protocollo.h  supermercato.h  threadpool.h  types.h
lib/lib-include/: concurrent_queue.h  mypoll.h  mypthread.h  mysocket.h  myutils.h  parser_config.h  pool.h  queue_linked.h
lib/lib-src/: concurrent_queue.c  mypoll.c  myutils.c  parser_config.c  pool.c  protocollo.c  queue_linked.c  threadpool.c
relazione/: Ludovico_Venturi-CorsoB_relazioneSOL.aux  Ludovico_Venturi-CorsoB_relazioneSOL.out  Ludovico_Venturi-CorsoB_relazioneSOL.tex  Ludovico_Venturi-CorsoB_relazioneSOL.toc  prova.aux  prova.blg  prova.out  prova.tex  prova.toc
script/: analisi.sh  myscript  test_direttore
src/: cassiere.c  cliente.c  direttore.c  notificatore.c  parser_writer.c  protocollo.c  supermercato.c
